infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    rules:
        - host: microservicesnext.dev
          http:
              paths:
                  - path: /static
                    pathType: Prefix
                    backend:
                        service:
                            name: core-srv
                            port:
                                number: 8000
                  - path: /graphql
                    pathType: Prefix
                    backend:
                        service:
                            name: core-srv
                            port:
                                number: 8000
                  - path: /admin
                    pathType: Prefix
                    backend:
                        service:
                            name: core-srv
                            port:
                                number: 8000
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: client-srv
                            port:
                                number: 3000
